fixed headertext gap

--- a/style/new-year.css
+++ b/style/new-year.css
@@ -26,11 +26,11 @@
     color: rgb(0, 0, 0);
     font-size: 42px;
     font-weight: bolder;
-    font-family: Helvetica, sans-serif
-    margin-bottom: 10px;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 18px;
 }
 .header-description{
-    margin-bottom: 10px;
+    margin-bottom: 18px;
 }
 
 .btn-primary{
